--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
-    "uview-ui": "^2.0.36",
+    "uview-plus": "^3.1.36",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
@@ -68,6 +68,8 @@
     "less-loader": "^7.3.0",
     "typescript": "^4.9.4",
     "vite": "4.1.4",
+    "pinia": "2.0.27",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vue-tsc": "^1.0.24"
   }
 }
