--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.9",
     "uview-plus": "^3.1.36",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
@@ -66,10 +68,12 @@
     "@vue/tsconfig": "^0.1.3",
     "less": "^4.2.0",
     "less-loader": "^7.3.0",
-    "typescript": "^4.9.4",
-    "vite": "4.1.4",
     "pinia": "2.0.27",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "sass": "^1.66.1",
+    "sass-loader": "^10.4.1",
+    "typescript": "^4.9.4",
+    "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
   }
 }
