--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3081220230817001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3081220230817001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3081220230817001",
-    "clipboard": "^2.0.11",
+    "@dcloudio/uni-ui": "^1.4.28",
     "dayjs": "^1.11.9",
-    "uview-plus": "^3.1.36",
-    "vue": "^3.2.45",
+    "highlight": "^0.2.4",
+    "pinia": "2.0.27",
+    "pinia-plugin-persistedstate": "^3.2.0",
+    "vue": "^3.2.37",
     "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
@@ -64,14 +66,12 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3081220230817001",
     "@dcloudio/uni-stacktracey": "3.0.0-3081220230817001",
     "@dcloudio/vite-plugin-uni": "3.0.0-3081220230817001",
+    "@uni-helper/uni-ui-types": "^0.5.11",
     "@vue/runtime-core": "^3.2.45",
     "@vue/tsconfig": "^0.1.3",
     "less": "^4.2.0",
     "less-loader": "^7.3.0",
-    "pinia": "2.0.27",
-    "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.66.1",
-    "sass-loader": "^10.4.1",
     "typescript": "^4.9.4",
     "vite": "4.1.4",
     "vue-tsc": "^1.0.24"
